--- a/static/style.css
+++ b/static/style.css
@@ -110,6 +110,7 @@ span.psw {
     background-color: rgba(0, 0, 0, 0.4);
     /* Black w/ opacity */
     padding-top: 60px;
+    box-sizing: border-box;
 }
 
 .center-fit {
@@ -281,4 +282,45 @@ input:checked+.slider:before {
     height: inherit;
     margin: 0;
     opacity: 0;
+}
+
+ul {
+    padding-left: 10px;
+}
+
+/* The message box is shown when the user clicks on the password field */
+#message {
+    display: block;
+    color: #000;
+    position: relative;
+
+    margin: 10px 0;
+}
+
+#message p {
+    margin: 0;
+    padding-left: 20px;
+    font-size: 18px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+    color: green;
+}
+
+.valid:before {
+    position: relative;
+    left: -12px;
+    content: "✔";
+}
+
+/* Add a red text color and an "x" icon when the requirements are wrong */
+.invalid {
+    color: red;
+}
+
+.invalid:before {
+    position: relative;
+    left: -12px;
+    content: "✖";
 }
